form wrapped into responsive 2 column grid

--- a/style/app.less
+++ b/style/app.less
@@ -47,7 +47,7 @@ body {
 
     }
     .result{
-      padding-bottom: 1.5em;
+      margin-bottom: 1.5em;
       span.entered {
         color: @errorColor;
         border-color: @errorColor;
@@ -68,7 +68,7 @@ body {
   label{
   }
   .result{
-    padding-bottom: 1.5em;
+    margin-bottom: 1.5em;
     span.entered {
       color: @successColor;
       font-weight: bold;
